   * Corrected D800E margins
   * Support for DNGs made from Fuji X-Pro1 RAWs
   * updated RawSpeed's camera list to r479
   * Win32/C-API: libraw_open_wfile/libraw_open_wfile_ex() calls
   * New warning flag LIBRAW_WARN_RAWSPEED_UNSUPPORTED, this bit in
     process_warnings is set (with LIBRAW_WARN_RAWSPEED_PROBLEM) if
     RawSpeed's checkSupported() fails.
   * LibRaw 0.15.0-Beta1

2012-09-17  Alex Tutubalin <lexa@lexa.ru>

   * Alpha-quality RawSpeed library support (http://rawstudio.org/blog/?p=800)
     Decoding (LibRaw::unpack()) of supported formats is 1.5-3x times faster.
  
    = API changes:
     -- imgdata.params.use_rawspeed run-time configuration option 
	 (default to Yes!)

     -- LibRaw::set_rawspeed_camerafile(char *path_to_cameras_xml) - call to 
	set camera information on runtime (cameras.xml from latest release is 
	compiled in). If you do not use this call, compile-time cameras.xml
        will be used.

     -- New call Libraw*datastream::size() returns full size of data file 
       (needed for RawSpeed support). Implemented for all datastreams provided 
       with LibRaw.

     -- imgdata.sizes.raw_pitch - row pitch in imgdata.rawdata.raw_image
        Use raw_image[row*raw_pitch+col] instead of [row*raw_width+col]
        if your code accesses raw_image[] array.
    
    == Other changes:
      -- dcraw_emu: command line switch -disars disables RawSpeed use
      -- postprocessing_benchmark: use -c to disable RawSpeed use

    = RawSpeed support uses buffer for full RAW file, so memory usage is higher.        

    = Compilation:
     - Use -DUSE_RAWSPEED define to turn RawSpeed support on. You'll need to 
       compile and install RawSpeed on your system.
       See README.RawSpeed.txt for details

     - set -DNOSONY_RAWSPEED to disable Sony files decoding by RawSpeed
	
     - ./configure do not supported yet, use Makefile.dist on Unix/Mac and 
       Makefile.msvc on Win32
