@@ -535,10 +535,7 @@ int LibRaw::get_decoder_info(libraw_decoder_info_t* d_info)
         {
             d_info->decoder_name = "packed_load_raw()";
             d_info->decoder_flags = LIBRAW_DECODER_FLATFIELD;
-#ifndef NOSONY_RAWSPEED
-            d_info->decoder_flags |= LIBRAW_DECODER_TRYRAWSPEED;
-#endif
-
+            //d_info->decoder_flags |= LIBRAW_DECODER_TRYRAWSPEED;
         }
     else if (load_raw == &LibRaw::nokia_load_raw )
         {
